...
        <item>With two to several people</item>
        <item>With a crowd</item>
    </string-array>

    <!-- Button Text -->
    <string name="add_mood">Add Mood</string>
    <string name="edit_mood">Edit Mood</string>
    <string name="delete_mood">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="save_button">Save Changes</string>

    <!-- Delete Confirmation -->
    <string name="delete_confirmation_title">Are You Sure You Want to Delete?</string>
...
